			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: ensure a thread is considered to exist before it actually
    starts running.

  * ADDED: experimental	predicate unifyable/3.  New versions of dif/2
    and when/2 based on this predicate by Tom Schrijvers.

  * ADDED: when/2

  * ADDED: ?=/2

  * FIXED: A \= B to run attributed variable wakeup handlers before
    doing the negation.


VERSION 5.3.3 (Mar 5, 2003)
===========================

  * ADDED: Initial version to control printing attributed variables.
    With input from Tom Schrijvers.

  * FIXED: Bug#127 (partially), system slowing down after Control-C
    followed by abort if the Control-C happens inside retract/1.
    Holger Kanwischer.

  * ENHANCED: CHR compiler and documentation.  By Tom Schrijvers.

  * ADDED: dif/2 in the library(dif).  Code contributed by Tom
    Schrijvers.  Thanks!

  * FIXED: reconsult to lock other threads (Unix).  Sandro Hawke.

  * FIXED: http_open/3 problems using redirection to non-absolute URL.
    Anjo Anjewierden.

  * FIXED: Bug#133: setarg/3 did not throw an exception.  Holger
    Kanwischer.

  * ADDED: Handle ~@ in format/[2,3].  SICStus compatibility.  Reported
    by Tom Schrijvers.

  * FIXED: sizeofClause() type error.  Michal Cihar.

  * FIXED: int/char problem in parser.  Michal Cihar.

  * FIXED: Bug#128: memory deallocation problem in library(memfile).
    MS-Windows only.  Added Sfree() to free memory from the right
    pool.  Holger Kanwischer.

  * FIXED: Bug#129: determinism in bagof/setof.  Holger Kanwischer.

  * FIXED: Bug#125: rename_file/2 if source and destination are the same.
    Dr. Werner Wolff.

  * FIXED: phrase/3.  Detmar Meurers and others.


VERSION 5.3.2 (Feb 4, 2003)
===========================
